--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,16 @@
+# Nombre de la aplicación
 spring.application.name=inventarios
-spring.datasource.url=jdbc:mysql://localhost:3306/inventario_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
+
+# Configuración de la base de datos PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventario_db
+spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Configuración de JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-#server.port=8081
+# Configuración opcional del puerto del servidor
+# server.port=8081
