--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# Nombre de la aplicación
+# Nombre de la aplicaciï¿½n
 spring.application.name=inventarios
 
-# Configuración de la base de datos PostgreSQL
+# Configuraciï¿½n de la base de datos PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/inventario_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuración de JPA y Hibernate
+# Configuraciï¿½n de JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Configuración opcional del puerto del servidor
+# Configuraciï¿½n opcional del puerto del servidor
 # server.port=8081
