--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -11,7 +11,7 @@ FROM openjdk:21-jdk-slim AS backend-build
 WORKDIR /GestionInventarios/BackEnd
 COPY BackEnd/pom.xml ./
 COPY BackEnd/src ./src
-RUN ./mvnw clean package
+RUN mvn clean package
 
 # Etapa final para ejecutar ambos
 FROM openjdk:21-jdk-slim
