--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -7,7 +7,7 @@ COPY FrontEnd/ ./
 RUN npm run build
 
 # Etapa de construcción para el backend
-FROM openjdk:21-jdk-slim AS backend-build
+FROM maven:3.8.7-openjdk-21-slim AS backend-build
 WORKDIR /GestionInventarios/BackEnd
 COPY BackEnd/pom.xml ./
 COPY BackEnd/src ./src
