--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -7,14 +7,14 @@ COPY FrontEnd/ ./
 RUN npm run build
 
 # Etapa de construcción para el backend
-FROM maven:3.8.7-openjdk-21-slim AS backend-build
+FROM maven:3.9.9-eclipse-temurin-21 AS backend-build
 WORKDIR /GestionInventarios/BackEnd
 COPY BackEnd/pom.xml ./
 COPY BackEnd/src ./src
-RUN mvn clean package
+RUN mvnw clean package
 
 # Etapa final para ejecutar ambos
-FROM openjdk:21-jdk-slim
+FROM maven:3.9.9-eclipse-temurin-21
 WORKDIR /GestionInventarios
 COPY --from=frontend-build /GestionInventarios/FrontEnd/dist ./FrontEnd/dist
 COPY --from=backend-build /GestionInventarios/BackEnd/target/inventarios-0.0.1-SNAPSHOT.jar ./backend.jar
