--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -30,4 +30,4 @@ EXPOSE 8080
 EXPOSE 4200
 
 # Comando para ejecutar ambos servidores (backend en un puerto y frontend en otro)
-CMD ["sh", "-c", "java -jar backend.jar & serve -s FrontEnd/dist -l 4200"]
+CMD ["sh", "-c", "java -jar backend.jar & http-server ./FrontEnd/dist -p 4200"]
