--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -24,4 +24,4 @@ EXPOSE 8080
 EXPOSE 4200
 
 # Comando para ejecutar ambos servidores (backend en un puerto y frontend en otro)
-CMD ["sh", "-c", "java -jar backend.jar & ./FrontEnd/dist -l 4200"]
+CMD ["sh", "-c", "java -jar backend.jar & npm run build ./FrontEnd/dist -l 4200"]
