Modificacion BackEnd DockerFile

--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -1,33 +1,23 @@
-# Etapa de construcción para el frontend
-FROM node:18 AS frontend-build
-WORKDIR /GestionInventarios/FrontEnd
-COPY FrontEnd/package*.json ./
-RUN npm install
-COPY FrontEnd/ ./
-RUN npm run build
-
 # Etapa de construcción para el backend
 FROM maven:3.9.9-eclipse-temurin-21 AS backend-build
 WORKDIR /GestionInventarios/BackEnd
-COPY BackEnd/pom.xml ./
-COPY BackEnd/src ./src
-RUN mvn clean package
 
-# Etapa final para ejecutar ambos
-FROM maven:3.9.9-eclipse-temurin-21
+# Copia los archivos necesarios
+COPY BackEnd/pom.xml .
+COPY BackEnd/src ./src
+
+# Construye el proyecto y genera el archivo JAR
+RUN mvn clean package -DskipTests
+
+# Etapa final para ejecutar el backend
+FROM eclipse-temurin:21-jdk
 WORKDIR /GestionInventarios
-COPY --from=frontend-build /GestionInventarios/FrontEnd/dist ./FrontEnd/dist
+
+# Copia el archivo JAR generado en la etapa de construcción
 COPY --from=backend-build /GestionInventarios/BackEnd/target/inventarios-0.0.1-SNAPSHOT.jar ./backend.jar
 
-# Instalar http-server
-RUN apt-get update && apt-get install -y curl && \
-    curl -sL https://deb.nodesource.com/setup_18.x | bash - && \
-    apt-get install -y nodejs && \
-    npm install -g http-server
-
-# Exponer los puertos necesarios
+# Exponer el puerto en el que correrá el backend
 EXPOSE 8080
-EXPOSE 4200
 
-# Comando para ejecutar ambos servidores (backend en un puerto y frontend en otro)
-CMD ["sh", "-c", "java -jar backend.jar & http-server ./FrontEnd/dist -p 4200"]
+# Comando para ejecutar el backend
+CMD ["java", "-jar", "backend.jar"]
