--- a/BackEnd/DockerFile
+++ b/BackEnd/DockerFile
@@ -10,7 +10,7 @@ COPY BackEnd/src ./src
 RUN mvn clean package -DskipTests
 
 # Etapa final para ejecutar el backend
-FROM eclipse-temurin:21-jdk
+FROM maven:3.9.9-eclipse-temurin-21
 WORKDIR /GestionInventarios
 
 # Copia el archivo JAR generado en la etapa de construcción
